--- a/DOM_TODO/todo.html
+++ b/DOM_TODO/todo.html
@@ -2,21 +2,31 @@
 <html>
 <head>
   <title>Simple To-Do List</title>
-  <style>
-    body { font-family: Arial; padding: 20px; }
-    ul { padding: 0; }
-    li { list-style: none; margin: 8px 0; }
-    button { margin-left: 10px; }
-  </style>
+  <link rel="stylesheet" href="style.css">
+  
 </head>
 <body>
 
-  <h2>My To-Do List</h2>
-  <input type="text" id="taskInput" placeholder="Enter a task">
-  <button onclick="addTask()">Add Task</button>
+  <div class="Main">
 
-  <ul id="taskList"></ul>
+    <h2>My To-Do List</h2>
 
+    <div class="main2">
+
+      <input type="text" id="taskInput" placeholder="Enter a task">
+      <button class="btnadd" onclick="AddTask()">Add Task</button>
+      
+    </div>
+    <div class="main3">
+
+
+      <ul id="taskList">  
+
+      </ul>
+      
+    </div>
+
+</div>
   <script src="script.js"></script>
 </body>
 </html>
